--- a/Android/res/layout/project_item.xml
+++ b/Android/res/layout/project_item.xml
@@ -19,21 +19,16 @@
           android:padding="8dp" >
           
     <TextView 
-        android:id="@+id/project_name"
+        android:id="@+id/project_title"
         android:textAppearance="?android:attr/textAppearanceMedium"
 		android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
     <TextView 
-        android:id="@+id/project_description"
+        android:id="@+id/project_client"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    
-    <TextView 
-        android:id="@+id/project_stats"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-          
+              
       </LinearLayout>
     
 </RelativeLayout>
