--- a/Android/res/layout/task_item.xml
+++ b/Android/res/layout/task_item.xml
@@ -1,18 +1,39 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="horizontal" >
-
-        <CheckBox
-            android:id="@+id/task_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:id="@+id/task_item_layout"
+        android:background="@drawable/task_item_background"
+		android:divider="?android:attr/dividerVertical"
+        >
 
         <TextView
             android:id="@+id/task_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:padding="8dp"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+        
+        <Spinner
+            android:id="@+id/task_status"
+            android:layout_width="wrap_content"
+            android:padding="8dp"
+			android:layout_height="wrap_content" />
+        
+        <TextView
+            android:id="@+id/task_duration"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:padding="8dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+        
+        <ImageButton
+		    android:id="@+id/task_track_button"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    style="?android:attr/borderlessButtonStyle" />
 
     </LinearLayout>
