--- a/Android/res/menu/project_actions.xml
+++ b/Android/res/menu/project_actions.xml
@@ -4,5 +4,9 @@
     <item android:id="@+id/menu_add_task"
           android:icon="@android:drawable/ic_menu_add"
           android:title="@string/add_task"
-          android:showAsAction="ifRoom|withText" />      
+          android:showAsAction="ifRoom|withText" />
+    
+    <item android:id="@+id/menu_refresh"
+          android:title="@string/refresh"
+          android:showAsAction="never" />
 </menu>
