--- a/Android/res/layout/task_item.xml
+++ b/Android/res/layout/task_item.xml
@@ -4,8 +4,7 @@
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:id="@+id/task_item_layout"
-        android:background="@drawable/task_item_background"
-		android:divider="?android:attr/dividerVertical"
+   		android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         >
 
         <TextView
@@ -13,22 +12,23 @@
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:padding="8dp"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:layout_gravity="center_vertical"
+            android:singleLine="true"
+            android:textSize="16sp" />
         
         <Spinner
             android:id="@+id/task_status"
             android:layout_width="wrap_content"
-            android:padding="8dp"
+            android:layout_gravity="center_vertical|right"
 			android:layout_height="wrap_content" />
         
         <TextView
             android:id="@+id/task_duration"
-            android:layout_width="100dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:padding="8dp"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:layout_gravity="center_vertical|right"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
         
         <ImageButton
 		    android:id="@+id/task_track_button"
