--- a/Android/res/layout/project_dialog.xml
+++ b/Android/res/layout/project_dialog.xml
@@ -23,4 +23,11 @@
             android:ems="10" >
         </EditText>
         
+        <Spinner
+            android:id="@+id/project_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/project_client"
+            />
+        
     </RelativeLayout>
