--- a/Android/res/layout/project_dialog.xml
+++ b/Android/res/layout/project_dialog.xml
@@ -28,6 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/project_client"
+            android:spinnerMode="dialog"
+            android:prompt="@string/project_category"
             />
         
     </RelativeLayout>
