--- a/Android/res/layout/project_status.xml
+++ b/Android/res/layout/project_status.xml
@@ -34,6 +34,8 @@
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_gravity="right"
+            android:spinnerMode="dialog"
+            android:prompt="@string/project_category"
             />
         
     </LinearLayout>
