--- a/Android/res/layout/project_item.xml
+++ b/Android/res/layout/project_item.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="64dp" >
+        android:layout_height="?android:attr/listPreferredItemHeight" >
         
        
     <ImageView 
@@ -20,7 +20,7 @@
           
     <TextView 
         android:id="@+id/project_title"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceListItem"
 		android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     
