--- a/Android/res/menu/main_actions.xml
+++ b/Android/res/menu/main_actions.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_search"
-          android:icon="@android:drawable/ic_menu_search"
-          android:title="@string/menu_search"
-          android:showAsAction="ifRoom|collapseActionView"
-          android:actionViewClass="com.noughmad.ntasks.QuickTaskView" />
-
+    
     <item android:id="@+id/menu_refresh"
           android:title="@string/refresh"
           android:showAsAction="never" />
@@ -16,8 +11,7 @@
           android:showAsAction="ifRoom|withText" />
     
     <item android:id="@+id/menu_logout"
-          android:icon="@android:drawable/ic_lock_power_off"
           android:title="@string/menu_logout"
-          android:showAsAction="ifRoom|withText" />
+          android:showAsAction="never" />
           
 </menu>
