--- a/Android/res/menu/main_actions.xml
+++ b/Android/res/menu/main_actions.xml
@@ -10,6 +10,10 @@
           android:title="@string/add_project"
           android:showAsAction="ifRoom|withText" />
     
+    <item android:id="@+id/menu_settings"
+        android:title="@string/settings"
+       android:icon="@android:drawable/ic_menu_preferences" />
+    
     <item android:id="@+id/menu_logout"
           android:title="@string/menu_logout"
           android:showAsAction="never" />
