--- a/Android/res/layout/project_status.xml
+++ b/Android/res/layout/project_status.xml
@@ -3,6 +3,7 @@
         android:layout_width="fill_parent"
         android:layout_height="64dp"
         android:orientation="horizontal"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         >
         
         <LinearLayout 
