--- a/Android/res/values/screen.xml
+++ b/Android/res/values/screen.xml
@@ -1,5 +1,4 @@
 <resources>
-    <bool name="task_item_show_duration">
-        false
-    </bool>
+    <bool name="task_item_show_duration">false</bool>
+    <bool name="two_pane_layout">false</bool>
 </resources>
