--- a/Android/res/layout/main.xml
+++ b/Android/res/layout/main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_container"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-    
-</RelativeLayout>
+
+    <fragment
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/project_list"
+        android:name="com.noughmad.ntasks.ProjectListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
