--- a/Android/res/values-w400dp/screen.xml
+++ b/Android/res/values-w400dp/screen.xml
@@ -1,5 +1,3 @@
 <resources>
-    <bool name="task_item_show_duration">
-        true
-    </bool>
+    <bool name="task_item_show_duration">true</bool>
 </resources>
