--- a/Android/res/layout/note_add.xml
+++ b/Android/res/layout/note_add.xml
@@ -1,17 +1,7 @@
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal"
-        android:id="@+id/task_item_layout"
-        >
-
-        <Button
-		    android:id="@+id/note_add_button"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    style="?android:attr/borderlessButtonStyle"
-		    android:text="@string/note_add"
-		    android:drawableLeft="@android:drawable/ic_menu_add" />
-               
-    </LinearLayout>
+<EditText 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/task_name_edit"
+    android:layout_width="match_parent"
+    android:layout_height="48dp"
+    android:hint="@string/add_note_text"
+    android:singleLine="false" />
