--- a/Android/res/layout/note_item.xml
+++ b/Android/res/layout/note_item.xml
@@ -4,6 +4,7 @@
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:id="@+id/task_item_layout"
+		android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         >
 
         <TextView
