--- a/Android/res/layout-sw600dp-land/project_list.xml
+++ b/Android/res/layout-sw600dp-land/project_list.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
-         android:layout_height="match_parent" >
+         android:layout_height="match_parent"
+         android:paddingLeft="16dp"
+         android:paddingTop="16dp"
+         android:paddingBottom="16dp"
+         android:background="@drawable/list_background_holo" >
 
 		<include layout="@android:layout/list_content" /> 
 </FrameLayout>
