--- a/Android/res/layout-sw600dp-land/task_status_item.xml
+++ b/Android/res/layout-sw600dp-land/task_status_item.xml
@@ -1,6 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="4dp"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
  	
     <TextView 
 		android:id="@+id/task_status_text"
