--- a/Android/res/layout/project_item.xml
+++ b/Android/res/layout/project_item.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/listPreferredItemHeight" >
+        android:layout_height="?android:attr/listPreferredItemHeight"
+        android:background="@drawable/project_item_background" >
         
        
     <ImageView 
