--- a/Android/res/menu-sw600dp/main_actions.xml
+++ b/Android/res/menu-sw600dp/main_actions.xml
@@ -6,6 +6,11 @@
           android:title="@string/add_project"
           android:showAsAction="ifRoom|withText" />
     
+    <item android:id="@+id/menu_add_task"
+          android:icon="@drawable/ic_menu_task_add"
+          android:title="@string/add_task"
+          android:showAsAction="ifRoom|withText" />
+    
     <item android:id="@+id/menu_refresh"
           android:title="@string/refresh"
           android:icon="@drawable/ic_menu_cloud"
@@ -15,4 +20,5 @@
         android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom|withText" />
+    
 </menu>
