--- a/Android/res/drawable/project_item_background.xml
+++ b/Android/res/drawable/project_item_background.xml
@@ -16,5 +16,5 @@ limitations under the License.
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_activated="true" android:drawable="@drawable/list_activated_holo" />
-    <item android:drawable="?android:attr/selectableItemBackground" />
+    <item android:drawable="@drawable/list_background_holo" />
 </selector>
