--- a/Android/res/layout-sw600dp-land/main.xml
+++ b/Android/res/layout-sw600dp-land/main.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_container"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:layout_height="fill_parent" >
     
     <fragment
         android:id="@+id/project_list"
         android:name="com.noughmad.ntasks.ProjectListFragment"
-        android:layout_width="0dip"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
        	android:tag="project-list" />
-    
+           
     <fragment 
-        android:id="@+id/project_detail"
-        android:name="com.noughmad.ntasks.ProjectDetailFragment"
-        android:layout_width="0dip"
-        android:layout_height="match_parent"
-        android:layout_weight="0.4" />
-    
+	    android:id="@+id/tasks_fragment"
+	    android:name="com.noughmad.ntasks.TaskListFragment"
+	    android:layout_width="400dp"
+	    android:layout_height="300dp"
+	    android:layout_toRightOf="@id/project_list" />
+	
+	<fragment 
+	    android:id="@+id/timeline_fragment"
+	    android:name="com.noughmad.ntasks.TimelineFragment"
+	    android:layout_width="300dp"
+	    android:layout_height="300dp"
+	    android:layout_toRightOf="@id/tasks_fragment"
+	    android:layout_alignParentRight="true" />
+		    
     <fragment
-       	android:id="@+id/project_timeline"
-       	android:name="com.noughmad.ntasks.TimelineFragment"
+       	android:id="@+id/notes_fragment"
+       	android:name="com.noughmad.ntasks.NotesFragment"
        	android:layout_width="0dip"
-       	android:layout_height="match_parent"
-       	android:layout_weight="0.3" />
+       	android:layout_height="200dp"
+       	android:layout_below="@id/tasks_fragment"
+       	android:layout_alignLeft="@id/tasks_fragment"
+       	android:layout_alignRight="@id/timeline_fragment"
+       	android:layout_alignParentBottom="true"
+       	android:layout_alignParentRight="true" />
     
-</LinearLayout>
+</RelativeLayout>
