--- a/Android/res/layout-sw600dp-land/main.xml
+++ b/Android/res/layout-sw600dp-land/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.noughmad.ntasks.TwoPaneLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
@@ -15,26 +15,18 @@
 	    android:id="@+id/tasks_fragment"
 	    android:name="com.noughmad.ntasks.TaskListFragment"
 	    android:layout_width="400dp"
-	    android:layout_height="300dp"
-	    android:layout_toRightOf="@id/project_list" />
+	    android:layout_height="300dp" />
 	
 	<fragment 
 	    android:id="@+id/timeline_fragment"
 	    android:name="com.noughmad.ntasks.TimelineFragment"
 	    android:layout_width="300dp"
-	    android:layout_height="300dp"
-	    android:layout_toRightOf="@id/tasks_fragment"
-	    android:layout_alignParentRight="true" />
+	    android:layout_height="300dp" />
 		    
     <fragment
        	android:id="@+id/notes_fragment"
        	android:name="com.noughmad.ntasks.NotesFragment"
        	android:layout_width="0dip"
-       	android:layout_height="200dp"
-       	android:layout_below="@id/tasks_fragment"
-       	android:layout_alignLeft="@id/tasks_fragment"
-       	android:layout_alignRight="@id/timeline_fragment"
-       	android:layout_alignParentBottom="true"
-       	android:layout_alignParentRight="true" />
+       	android:layout_height="200dp" />
     
-</RelativeLayout>
+</com.noughmad.ntasks.TwoPaneLayout>
